--- a/assets/pages/pagina2.html
+++ b/assets/pages/pagina2.html
@@ -12,6 +12,7 @@
 
     <h3>Imagenes</h3>
     <img src="url de imagen Link/direccion" alt="imagen cargando" width="200">
+    <img src="../img/img.jpg" alt="poly" width="200">
 
     <a href="hipervinculo"><img src="url de imagen" alt="imagen para hipervinculo" width="200"></a>
 </body>
